fix(list-item, stack): stretch action-menu and handle when placed inside a list-item or stack.

--- a/packages/calcite-components/src/components/list-item/list-item.scss
+++ b/packages/calcite-components/src/components/list-item/list-item.scss
@@ -137,7 +137,8 @@ td:focus {
 .actions-start,
 .actions-end {
   ::slotted(calcite-action),
-  ::slotted(calcite-action-menu) {
+  ::slotted(calcite-action-menu),
+  ::slotted(calcite-handle) {
     @apply self-stretch;
 
     color: inherit;
