--- a/packages/calcite-components/src/components/stack/stack.scss
+++ b/packages/calcite-components/src/components/stack/stack.scss
@@ -64,7 +64,8 @@
 .actions-start,
 .actions-end {
   ::slotted(calcite-action),
-  ::slotted(calcite-action-menu) {
+  ::slotted(calcite-action-menu),
+  ::slotted(calcite-handle) {
     @apply self-stretch;
 
     color: inherit;
